# taranis-ai-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: openapi-compat.yml
src/taranis_ai_cli/: __main__.py  cli.py  client.py  config.py  operations.py
tools/: check_openapi_compat.py
