[project]
name = "taranis-ai-cli"
version = "0.1.0"
description = "Standalone CLI for Taranis API without MCP dependency"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
taranis-ai-cli = "taranis_ai_cli.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
